--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,3 +1,5 @@
+@import "variables";
+@import "function";
 @import "account";
 @import "cart";
 @import "component";
@@ -8,3 +10,20 @@
 @import "./component/alerte";
 @import "./component/card";
 @import "./component/navbar";
+@import "./component/footer";
+
+
+html{
+    font-family: $titlefont;
+}
+*{
+    margin: 0;
+    padding: 0;
+}
+a{
+    color: $textcolor;
+    text-decoration: none;
+}
+body{
+    background-color: $primarybg;
+}
