--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -12,6 +12,7 @@
 @import "./component/card";
 @import "./component/navbar";
 @import "./component/footer";
+@import "./component/loading";
 
 
 html{
