integration page catalogue + card de produits

--- a/src/assets/css/component/footer.scss
+++ b/src/assets/css/component/footer.scss
@@ -2,6 +2,7 @@ footer{
     text-align: center;
     background-color: $secondarybg;
     width: 100%;
+    list-style-type: none;
     border-top: solid 5px $maincolor;
     
 
