--- a/src/assets/css/component/card.scss
+++ b/src/assets/css/component/card.scss
@@ -1,21 +1,28 @@
 .card{
 @include flexCol();
-width: 100%;
+width: 21%;
 margin: auto;
+align-items: center;
+margin-bottom: 2%;
 
     &__img{
-        width: 50%;
+        width: 60%;
+        text-align: center;
+        margin-bottom: 20%;
+
     }
 
     &__info{
-        
+        width: 80%;
+        @include flexRow();
+        justify-content: space-between;
         
         &__text{
-
+            font-weight: bold;
 
 
             &__title{
-
+                text-transform: uppercase;
             }
 
             &__price{
@@ -23,8 +30,16 @@ margin: auto;
             }
         }
 
-        &__button{
 
+        &__link{
+            width: 50%;
+            text-align: right;
+
+            &__button{
+                @include button();
+                display: inline;
+            }
         }
+        
     }
 }
