--- a/src/assets/css/function.scss
+++ b/src/assets/css/function.scss
@@ -6,3 +6,19 @@
     display: flex;
     flex-direction: column;
 }
+@mixin button {
+    color: $textcolor;
+    background-color: $maincolor;
+    border: none;
+    border-radius: 50px;
+    text-transform: uppercase;
+    padding: 14%;
+    padding-top: 6%;
+    padding-bottom: 6%;
+    font-weight: bold;
+    cursor: -webkit-zoom-in;
+    cursor: pointer;
+}
+@mixin bordertop{
+    border-top: solid 5px $maincolor;
+}
