integration terminée page produit + single produit

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -6,6 +6,7 @@
 @import "config";
 @import "home";
 @import "signin";
+@import "singleproduct";
 @import "./component/alerte";
 @import "./component/card";
 @import "./component/navbar";
