--- a/src/assets/css/component/productlist.scss
+++ b/src/assets/css/component/productlist.scss
@@ -1,6 +1,9 @@
 .productlist{
     @include flexRow;
     flex-wrap: wrap;
-    width: 80%;
+    width: 100%;
     margin: auto;
+}
+.contnair-list{
+    width: 80%;
 }
