--- a/src/assets/css/home.scss
+++ b/src/assets/css/home.scss
@@ -33,14 +33,14 @@
 
     // Card
     &__products{
-        @include flexCol
+        @include flexCol;
         text-transform: uppercase;
         padding: 1%;
         margin: auto;
-        @include bordertop
+        @include bordertop;
         
         &__cards{
-            @include flexRow
+            @include flexRow;
             justify-content: space-between;
             padding: 5%;
         }
@@ -54,7 +54,7 @@
         width: 100%;
         
         &__item{
-            @include bordertop
+            @include bordertop;
             width: 100%;
         }
     }
