--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -7,6 +7,7 @@
 @import "config";
 @import "home";
 @import "signin";
+@import "signup";
 @import "peripherique";
 @import "./component/alerte";
 @import "./component/card";
