--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -15,6 +15,8 @@
 @import "./component/loading";
 @import "./component/productlist";
 @import "./component/filters";
+@import "./component/return";
+@import "./component/notification";
 
 
 html,body{
@@ -27,6 +29,10 @@ main{
     flex-grow: 100;
     display: flex;
     align-items: center;
+    margin-top: 5%;
+    }
+main>.catalogue{
+    margin-top: -10%;
 }
 #root{
     height: 75%;
