--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -1,8 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;700&display=swap');
 
+// $titlefont : 'Spartan';
+// $primarybg : #e9c8ff;
+// $maincolor : #C600FF;
+// $textcolor : rgb(0, 0, 0);
+// $secondarybg : #e0dfdf;
+// $popupbg : rgb(214, 214, 214);
+// $secondcolor : #ff8400;
+
 $titlefont : 'Spartan';
 $primarybg : #0B050F;
 $maincolor : #C600FF;
 $textcolor : white;
-$secondarybg : black;
-$popupbg : #eee8f0ff;
+$secondarybg : #0e0e0e;
+$popupbg : rgb(37, 28, 41);
+$secondcolor : #ff8400;
