--- a/src/assets/css/component/card.scss
+++ b/src/assets/css/component/card.scss
@@ -14,15 +14,21 @@ margin-bottom: 2%;
 
     &__info{
         width: 80%;
-        @include flexRow();
+        @include flexCol();
         justify-content: space-between;
         
         &__text{
             font-weight: bold;
-
+            align-items:center ;
+            width: 100%;
+            @include flexRow;
+            justify-content: space-between;
 
             &__title{
                 text-transform: uppercase;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap
             }
 
             &__price{
