--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;700&display=swap');
 
 $titlefont : 'Spartan';
-$primarybg : #ecddec;
+$primarybg : #ddd5dd;
 $maincolor : #C600FF;
 $textcolor : rgb(0, 0, 0);
-$secondarybg : #e0dfdf;
+$secondarybg : #f0efef;
 $popupbg : rgb(214, 214, 214);
 $secondcolor : #ff8400;
 
