--- a/src/assets/css/about.scss
+++ b/src/assets/css/about.scss
@@ -1,11 +1,21 @@
 .about{
+margin-top: 2%;
 @include flexCol;
 align-items: center;
 width: 100%;
-height: 100vh;
+height: 100%;
+margin-bottom: 5%;
+font-size: 1.3rem;
+
+    h3{
+        color: $maincolor;
+        font-weight: bold;
+        font-size: 1.2rem;
+    }
+
 
     &__map{
-        margin-top: 7px;
+        margin-top: 2%;
         @include flexCol;
         display : flex;
         align-items: center;
@@ -20,9 +30,10 @@ height: 100vh;
         justify-content: center;
         align-self: center;
         align-items: center;
-        margin-top: 5px;
-        text-align: center;
-        
+        margin-top: 3%;
+        text-align: left;
+  
     }
+
 }
 
