--- a/src/assets/css/home.scss
+++ b/src/assets/css/home.scss
@@ -59,6 +59,7 @@
         @include flexRow;
         width: 100%;
         height: 50vh;
+        text-align: center;
         &__content{
             height: 100%;
             @include flexCol;
