--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -9,6 +9,7 @@
 @import "signin";
 @import "singleproduct";
 @import "signup";
+@import "myaccount";
 @import "./component/alerte";
 @import "./component/card";
 @import "./component/navbar";
