--- a/src/assets/css/function.scss
+++ b/src/assets/css/function.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
 }
 @mixin button {
-    color: $textcolor;
+    color: white;
     background-color: $maincolor;
     border: none;
     border-radius: 50px;
